@@ -4,7 +4,7 @@
 :s3:
   :region: ADD HERE # S3 bucket region
   :buckets:
-    :assets: s3://snowplow-hosted-assets # ONLY CHANGE if you are adding your own JSON Path files in your own bucket
+    :assets: # Not required for Postgres
     :enriched:
       :good: ADD HERE # This is the same as the :enriched:good: bucket specified for EmrEtlRunner
       :archive ADD HERE # Where to archive enriched events to
